chore: moved quality checks under quality profile.