@@ -151,7 +151,7 @@ public class JwtValidationRoute extends RouteBuilder {
 
     // Validate audience
     List<String> audience = claims.getAudience();
-    if (audience == null || audience.isEmpty() || !securityProperties.getAudience().equals(audience.getFirst())) {
+    if (audience == null || audience.isEmpty() || !securityProperties.getAudience().equals(audience.get(0))) {
       throw new TokenValidationException("ERROR-AUTH004", "Invalid token audience");
     }
 
